--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>modm8</title>
 </head>
-<body style="--wails-draggable:drag">
+<body class="drag">
     <div id="app"></div>
     <script src="./src/main.ts" type="module"></script>
 </body>
