--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>modm8</title>
 </head>
-<body class="drag">
+<body>
     <div id="app"></div>
     <script src="./src/main.ts" type="module"></script>
 </body>
 </html>
-
