language is now persistent across restarts

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>modm8</title>
-</head>
-<body class="drag">
-    <div id="app"></div>
-    <script src="./src/main.ts" type="module"></script>
-</body>
-</html>
+    <head>
+        <title>modm8</title>
 
+        <meta charset="UTF-8"/>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+        
+        <link id="theme-link" rel="stylesheet" href="./src/assets/styles/themes/default-purple/dark.css">
+    </head>
+    <body class="drag">
+        <div id="app"></div>
+        <script src="./src/main.ts" type="module"></script>
+    </body>
+</html>
