--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,8 @@
         <meta charset="UTF-8"/>
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
         
-        <link id="theme-link" rel="stylesheet" href="./src/assets/styles/themes/aura/dark-purple.css">
+        <link id="theme-link" rel="stylesheet" href="./src/resources/themes/aura-dark-purple/theme.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head>
     <body class="drag">
         <div id="app"></div>
