--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head>
     
-    <body class="drag">
+    <body>
         <div id="app"></div>
         <script src="./src/main.ts" type="module"></script>
     </body>
