--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>modm8</title>
-
         <meta charset="UTF-8"/>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-        <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"> -->
+        <title>modm8</title>
     </head>
     
     <body>
         <div id="app"></div>
-        <script src="./src/main.ts" type="module"></script>
+        <script type="module" src="./src/main.ts"></script>
     </body>
 </html>
